--- a/src/App.css
+++ b/src/App.css
@@ -34,5 +34,26 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-/* Προσθέστε εδώ περαιτέρω CSS για τα components */
 
+
+.welcome {
+  /* Εφαρμόζεται στο καλωσόρισμα σε όλες τις σελίδες */
+  background-color: rgba(233, 227, 221, 1);
+  color: #333;
+  padding: 1rem;
+  text-align: center;
+  font-family: cursive;
+  font-size: 1.5rem;
+  font-weight: bold;
+  border-bottom: 2px solid #ccc;
+}
+
+/* Κλάσμα για το καλωσόρισμα που θα είναι ορατό μόνο στην αρχική σελίδα */
+.welcome.homepage {
+  display: block;
+}
+
+/* Κλάσμα για το καλωσόρισμα που θα είναι κρυφό σε άλλες σελίδες */
+.welcome.hidden {
+  display: none;
+}
