--- a/src/assets/Header.css
+++ b/src/assets/Header.css
@@ -1,4 +1,4 @@
-/* Header.css */
+
 header {
   background: rgba(52, 58, 64, 0.85);
   color: black;
@@ -26,11 +26,12 @@ nav ul li a {
   color: black;
   text-decoration: none;
   font-weight: semi-bold;
+  font-family: cursive;
   transition: color 0.3s ease;
 }
 
 nav ul li a:hover {
-  color: #f8f9fa; /* Λίγο ανοιχτότερο γκρι για hover effect */
+  color: #ca9613; /* Λίγο ανοιχτότερο γκρι για hover effect */
 }
 
 .cart {
