--- a/src/assets/MainContent.css
+++ b/src/assets/MainContent.css
@@ -13,6 +13,11 @@ main {
   margin-left: -20%;
 }
 
+.product-title {
+  margin-bottom: 4rem;
+  margin-top: -4rem;
+  font-family: cursive;
+}
 .product-description {
   color: black;
   display: inline-block;
@@ -26,11 +31,22 @@ main {
 .product-description h1 {
   font-size: 3rem;
   margin-bottom: 0.5rem;
+  font-family: cursive;
+  
 }
+
+.product-description h2 {
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+  font-family: cursive;
+  
+}
+
 
 .product-description p {
   font-size: 1.5rem;
   margin-bottom: 1rem;
+  font-family: cursive;
 }
 
 .product-description button {
@@ -42,6 +58,7 @@ main {
   border-radius: 50px;
   box-shadow: 0 4px 8px rgba(29, 19, 8, 0.3); /* Προσαρμογή του box-shadow */
   transition: transform 0.2s ease, box-shadow 0.2s ease;
+  font-family: cursive;
 }
 
 .product-description button:hover {
@@ -76,4 +93,64 @@ main {
 
 .showing {
   display: block;
+}
+
+.product-summary {
+  background-color: rgba(233, 227, 221, 0.8);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  font-family: cursive;
+  text-align: center;
+  margin-top: 300px;
+}
+
+.summary-title {
+  font-size: 24px;
+  color: #333;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.summary-text {
+  font-size: 18px;
+  color: #555;
+  line-height: 1.5;
+}
+
+.summary-text::after {
+  content: '';
+  display: block;
+  width: 100px;
+  height: 2px;
+  background-color: #333;
+  margin: 20px auto;
+}
+
+.summary-price {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.product-summary button {
+  font-size: 1rem;
+  padding: 1rem 2rem;
+  background-color: rgba(59, 33, 8, 0.5); /* Προσθήκη διαφάνειας στο χρώμα */
+  color: black; /* Αλλαγή του χρώματος του κειμένου */
+  border: none;
+  border-radius: 50px;
+  box-shadow: 0 4px 8px rgba(29, 19, 8, 0.3); /* Προσαρμογή του box-shadow */
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+  font-family: cursive;
+}
+
+.product-summary button:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 6px 12px rgba(233, 227, 221, 0.5); /* Προσαρμογή του box-shadow κατά το hover */
+}
+
+.product-summary button:active {
+  transform: translateY(0);
+  box-shadow: 0 2px 4px rgba(233, 227, 221, 0.3); /* Προσαρμογή του box-shadow κατά το active */
 }
