--- a/src/assets/Header.css
+++ b/src/assets/Header.css
@@ -1,6 +1,6 @@
 
 header {
-  background: rgba(52, 58, 64, 0.85);
+  background-color: white;
   color: black;
   padding: 1rem 2rem;
   display: flex;
@@ -20,6 +20,7 @@ nav ul {
   padding: 0;
   display: flex;
   gap: 2rem;
+  
 }
 
 nav ul li a {
