--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ main {
 body {
   margin: 0;
   padding: 0;
-  background-color: rgba(233, 227, 221, 1); /* Αυτό θα ορίσει το χρώμα του background */
+  background-color: white; /* Αυτό θα ορίσει το χρώμα του background */
   color: #333; /* Για καλύτερη αντίθεση, ρυθμίστε το χρώμα του κειμένου */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -38,7 +38,7 @@ code {
 
 .welcome {
   
-  background-color: rgba(233, 227, 221, 1);
+  background-color: white;
   color: #333;
   padding: 1rem;
   text-align: center;
