--- a/src/assets/ContactForm.css
+++ b/src/assets/ContactForm.css
@@ -4,7 +4,7 @@
 }
 
 .contact-form-container {
-    background-color: rgba(233, 227, 221, 1);
+    background-color: rgb(235, 231, 228);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
