--- a/src/assets/MainContent.css
+++ b/src/assets/MainContent.css
@@ -24,8 +24,9 @@ main {
   padding: 20px;
   border-radius: 10px;
   margin-top: 30px;
-  background-color: rgba(233, 227, 221, 0.8);
+  background-color: #faf5ef;
   margin-left: 30%;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 .product-description h1 {
@@ -52,7 +53,7 @@ main {
 .product-description button {
   font-size: 1rem;
   padding: 1rem 2rem;
-  background-color: rgba(59, 33, 8, 0.5); /* Προσθήκη διαφάνειας στο χρώμα */
+  background-color: WHITE; /* Προσθήκη διαφάνειας στο χρώμα */
   color: black; /* Αλλαγή του χρώματος του κειμένου */
   border: none;
   border-radius: 50px;
