--- a/src/assets/MainContent.css
+++ b/src/assets/MainContent.css
@@ -24,7 +24,7 @@ main {
   padding: 20px;
   border-radius: 10px;
   margin-top: 30px;
-  background-color: #faf5ef;
+  background-color: #fbf9ed;
   margin-left: 30%;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
