--- a/src/assets/Product.css
+++ b/src/assets/Product.css
@@ -49,8 +49,8 @@ body {
   .product-introduction button {
     font-size: 1rem;
     padding: 1rem 2rem;
-    background-color: rgba(59, 33, 8, 0.5); 
-    color: black; 
+    background-color:BLACK;
+    color: WHITE; 
     border: none;
     border-radius: 50px;
     box-shadow: 0 4px 8px rgba(29, 19, 8, 0.3); 
