--- a/src/assets/Product.css
+++ b/src/assets/Product.css
@@ -80,3 +80,37 @@ body {
     height: 50%;
     
   }
+
+  @media screen and (max-width: 600px) {
+    .product-details {
+      max-width: 100%;
+      padding: 10px;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    }
+  
+    .product-details h1 {
+      font-size: 24px;
+    }
+  
+    .product-introduction {
+      padding: 10px;
+    }
+  
+    .product-info h2 {
+      font-size: 20px;
+    }
+  
+    .product-introduction button {
+      font-size: 0.8rem;
+      padding: 0.8rem 1.6rem;
+      box-shadow: 0 2px 4px rgba(29, 19, 8, 0.3);
+    }
+  
+    .carousel-root {
+      width: 100%;
+    }
+  
+    .carousel img {
+      height: auto;
+    }
+  }
