--- a/src/assets/MainContent.css
+++ b/src/assets/MainContent.css
@@ -16,7 +16,7 @@ main {
 .product-title {
   margin-bottom: 4rem;
   margin-top: -7rem;
-  font-family: cursive;
+ 
 }
 .product-description {
   color: black;
@@ -25,6 +25,7 @@ main {
   border-radius: 10px;
   margin-top: 30px;
   background-color: #fbf9ed;
+  font-family: sans-serif;
   margin-left: 30%;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
@@ -32,14 +33,14 @@ main {
 .product-description h1 {
   font-size: 3rem;
   margin-bottom: 0.5rem;
-  font-family: cursive;
+ 
   
 }
 
 .product-description h2 {
   font-size: 2rem;
   margin-bottom: 0.5rem;
-  font-family: cursive;
+ 
   
 }
 
@@ -47,7 +48,7 @@ main {
 .product-description p {
   font-size: 1.5rem;
   margin-bottom: 1rem;
-  font-family: cursive;
+ 
 }
 
 .product-description button {
@@ -59,7 +60,8 @@ main {
   border-radius: 50px;
   box-shadow: 0 4px 8px rgba(29, 19, 8, 0.3); /* Προσαρμογή του box-shadow */
   transition: transform 0.2s ease, box-shadow 0.2s ease;
-  font-family: cursive;
+  font-family: sans-serif;
+ 
 }
 
 .product-description button:hover {
@@ -102,7 +104,7 @@ main {
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-  font-family: cursive;
+ 
   text-align: center;
   margin-top: 300px;
 }
@@ -144,7 +146,8 @@ main {
   border-radius: 50px;
   box-shadow: 0 4px 8px rgba(29, 19, 8, 0.3); /* Προσαρμογή του box-shadow */
   transition: transform 0.2s ease, box-shadow 0.2s ease;
-  font-family: cursive;
+  font-family: sans-serif;
+ 
 }
 
 .product-summary button:hover {
