--- a/src/assets/Header.css
+++ b/src/assets/Header.css
@@ -1,4 +1,4 @@
-
+/* Βασικά στυλ για header */
 header {
   background-color: #fbf9ed;
   color: black;
@@ -10,6 +10,7 @@ header {
   top: 0;
   z-index: 1000;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  width: 100%;
 }
 
 .logo img {
@@ -21,17 +22,14 @@ nav ul {
   padding: 0;
   display: flex;
   gap: 2rem;
- 
-  
 }
 
 nav ul li a {
   color: black;
   text-decoration: none;
   font-weight: semi-bold;
- font-family: sans-serif;
+  font-family: sans-serif;
   transition: color 0.3s ease;
- 
 }
 
 nav ul li a:hover {
@@ -73,4 +71,74 @@ nav ul li a:hover {
   font-weight: bold;
   font-size: 1rem;
   color: black;
+}
+
+.menu-icon {
+  display: none; /* Αρχικά κρύβουμε το εικονίδιο του μενού */
+}
+
+
+/* Απόκριση σε μικρές οθόνες */
+@media only screen and (max-width: 600px) {
+  header {
+    padding: 0.5rem 1rem; 
+    width: 100%; /* Πλήρης πλάτος για μικρές οθόνες */
+    /* Μείωση του padding για πιο συμπαγή εμφάνιση */
+  }
+
+  .logo img {
+    height: 40px; /* Μικρότερο μέγεθος λογότυπου για μικρές οθόνες */
+  }
+
+  .menu-icon {
+    display: block; /* Εμφανίζουμε το εικονίδιο του μενού για μικρές οθόνες */
+    cursor: pointer; /* Καθορίζουμε τον δείκτη ως δείκτη κατάλληλο για το κλικ */
+  }
+
+
+  nav {
+    display: none; /* Αρχικά κρύβουμε το μενού για μικρές οθόνες */
+    position: absolute; /* Αποθετήστε το μενού σε απόλυτη θέση */
+    top: 70px; /* Καθορίστε την απόσταση από το επάνω μέρος */
+    left: 0; /* Τοποθετήστε το μενού στο αριστερό άκρο της οθόνης */
+    width: 100%; /* Καθορίστε το πλάτος του μενού σε πλήρη πλάτος */
+    background-color: #fbf9ed; /* Βασικό χρώμα φόντου */
+    z-index: 999; /* Καθορίστε ένα υψηλό z-index για να είναι πάνω από όλα τα άλλα στοιχεία */
+  }
+
+  nav.open {
+    display: block; /* Εμφανίστε το μενού όταν είναι ανοικτό */
+  }
+
+  nav ul {
+    flex-direction: column; /* Αλλάξτε τον κατακόρυφο προσανατολισμό */
+    gap: 1rem; /* Μικρότερο διάστημα μεταξύ των στοιχείων του μενού */
+    padding: 1rem; /* Προσθέστε εσωτερικό padding για καλύτερη εμφάνιση */
+  }
+
+  nav ul li {
+    text-align: center; /* Κείμενο κεντρικά */
+  }
+}
+  nav ul li a {
+    font-size: 0.9rem; /* Μικρότερο μέγεθος γραμματοσειράς για μικρές οθόνες */
+  }
+
+  .cart img {
+    height: 25px; /* Μικρότερο μέγεθος εικονίδιου καρού για μικρές οθόνες */
+  }
+
+  .cart .cart-icon {
+    width: 25px;
+    height: 25px; /* Μικρότερο μέγεθος εικονίδιου καρού για μικρές οθόνες */
+  }
+
+  .cart .cart-icon i {
+    font-size: 1rem; /* Μικρότερο μέγεθος εικονίδιου καρού για μικρές οθόνες */
+  }
+
+  .cart .cart-count {
+    padding: 3px 8px; /* Μικρότερο padding για τον αριθμό στο καλάθι για μικρές οθόνες */
+    font-size: 0.8rem; /* Μικρότερο μέγεθος γραμματοσειράς για τον αριθμό στο καλάθι για μικρές οθόνες */
+  }
 }
