--- a/src/assets/Header.css
+++ b/src/assets/Header.css
@@ -80,11 +80,9 @@ nav ul li a:hover {
 
 /* Απόκριση σε μικρές οθόνες */
 @media only screen and (max-width: 600px) {
+ 
   header {
-    /* padding: 0.5rem 1rem;  */
-    width: 100%;
-    
-    
+    padding: 1rem; 
   }
 
   .logo img {
