--- a/src/assets/Header.css
+++ b/src/assets/Header.css
@@ -1,4 +1,3 @@
-/* Βασικά στυλ για header */
 header {
   background-color: #fbf9ed;
   color: black;
@@ -22,6 +21,8 @@ nav ul {
   padding: 0;
   display: flex;
   gap: 2rem;
+  flex-direction: column; /* Αλλάξτε τον κατακόρυφο προσανατολισμό */
+    padding: 1rem; 
 }
 
 nav ul li a {
@@ -74,9 +75,24 @@ nav ul li a:hover {
 }
 
 .menu-icon {
-  display: none; /* Αρχικά κρύβουμε το εικονίδιο του μενού */
+  display: block;
+  cursor: pointer;
 }
 
+
+nav {
+  display: none; /* Αρχικά κρύβουμε το μενού για μικρές οθόνες */
+  position: absolute; /* Αποθετήστε το μενού σε απόλυτη θέση */
+  top: 70px; /* Καθορίστε την απόσταση από το επάνω μέρος */
+  left: 0; /* Τοποθετήστε το μενού στο αριστερό άκρο της οθόνης */
+  width: 100%; /* Καθορίστε το πλάτος του μενού σε πλήρη πλάτος */
+  background-color: #fbf9ed; /* Βασικό χρώμα φόντου */
+  z-index: 999; /* Καθορίστε ένα υψηλό z-index για να είναι πάνω από όλα τα άλλα στοιχεία */
+}
+
+nav.open {
+  display: block; /* Εμφανίστε το μενού όταν είναι ανοικτό */
+}
 
 /* Απόκριση σε μικρές οθόνες */
 @media only screen and (max-width: 600px) {
@@ -94,7 +110,6 @@ nav ul li a:hover {
     cursor: pointer; /* Καθορίζουμε τον δείκτη ως δείκτη κατάλληλο για το κλικ */
   }
 
-
   nav {
     display: none; /* Αρχικά κρύβουμε το μενού για μικρές οθόνες */
     position: absolute; /* Αποθετήστε το μενού σε απόλυτη θέση */
@@ -110,6 +125,7 @@ nav ul li a:hover {
   }
 
   nav ul {
+    display: flex;
     flex-direction: column; /* Αλλάξτε τον κατακόρυφο προσανατολισμό */
     gap: 1rem; /* Μικρότερο διάστημα μεταξύ των στοιχείων του μενού */
     padding: 1rem; /* Προσθέστε εσωτερικό padding για καλύτερη εμφάνιση */
@@ -141,3 +157,8 @@ nav ul li a:hover {
     font-size: 0.8rem; /* Μικρότερο μέγεθος γραμματοσειράς για τον αριθμό στο καλάθι για μικρές οθόνες */
   }
 
+/* Εμφανίστε το εικονίδιο του μενού στην αριστερή άκρη του header */
+.menu-icon {
+  order: -1; /* Τοποθετήστε το πριν από το λογότυπο */
+  margin-left: 1rem; /* Αφήστε κάποιο χώρο μεταξύ του εικονιδίου του μενού και του λογότυπου */
+}
