--- a/src/assets/Product.css
+++ b/src/assets/Product.css
@@ -144,10 +144,14 @@
     margin: 0;
     width: 100%;
   }
+.carousel-root {
+  width: 100%;
+  margin-top: 5%;
+}
 
   .product-details {
     width: 100%;
-    margin-top: 5%;
+    margin-top: 8%;
   }
 
   .product-details h1 {
