--- a/src/assets/Header.css
+++ b/src/assets/Header.css
@@ -4,7 +4,7 @@ header {
   padding: 1rem 2rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   position: sticky;
   top: 0;
   z-index: 1000;
@@ -87,8 +87,22 @@ nav ul li a:hover {
 .menu-icon {
   display: block;
   cursor: pointer;
+
+  
 }
 
+
+.open {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 250px; 
+  height: 100vh;
+  background-color: #fff; 
+  overflow: auto;
+ transition: all 2s ease-in-out;
+  z-index: 1000;
+}
 
 nav {
   display: none; /* Αρχικά κρύβουμε το μενού για μικρές οθόνες */
@@ -202,5 +216,9 @@ nav.open {
 .login-icon {
   color: black; /* Χρώμα του εικονιδίου */
   font-size: 20px; /* Μέγεθος εικονιδίου */
-  cursor: pointer; /* Καθορίστε τον δείκτη ως δείκτη κατάλληλο για το κλικ */
+  cursor: pointer;
+  margin-top: 1px;
+   /* Καθορίστε τον δείκτη ως δείκτη κατάλληλο για το κλικ */
 }
+
+
