--- a/src/assets/Header.css
+++ b/src/assets/Header.css
@@ -8,12 +8,13 @@ header {
   position: sticky;
   top: 0;
   z-index: 1000;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); */
   width: 100%;
 }
 
 .logo{
   height: 60px;
+  font-weight: 200;
   
 }
 
@@ -22,7 +23,7 @@ header {
   margin-top: 1rem;
   margin-left: 1rem;
   font-family: sans-serif;
-  font-weight: 200;
+  font-weight: 00;
 }
 
 nav ul {
