--- a/src/assets/Footer.css
+++ b/src/assets/Footer.css
@@ -1,5 +1,5 @@
 .site-footer {
-    background-color: #333;
+    background-color: black;
     color: #fff;
     padding: 20px 0;
     text-align: center;
