--- a/src/assets/MainContent.css
+++ b/src/assets/MainContent.css
@@ -88,7 +88,7 @@ main {
 /* Σύνοψη προϊόντος */
 .product-summary {
   margin-top: 2rem;
-  background-color: rgba(233, 227, 221, 0.8);
+  background-color: #fbf9ed;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
@@ -139,6 +139,16 @@ main {
 .product-summary button:active {
   transform: translateY(0);
   box-shadow: 0 2px 4px rgba(233, 227, 221, 0.3);
+}
+
+
+.deserve {
+  margin-top: -60px; /* Αυξήστε ή μειώστε αυτήν την τιμή ανάλογα με το πόσο πάνω θέλετε να μετακινήσετε το "deserve" */
+}
+
+.stay {
+  font-size: 2em;
+  margin-top: 10px; /* Αυξήστε αυτήν την τιμή για να αυξήσετε το μέγεθος των γραμμάτων */
 }
 
 
@@ -214,5 +224,27 @@ main {
   .product-summary button {
     font-size: 1rem;
     padding: 0.5rem 1rem;
+  }
+
+  .deserve {
+    margin-top: -160px;
+    font-size: 1.4rem;
+    font-weight: 200;
+    display: inline-block;
+ border-bottom: 0.5px solid;
+    
+}
+
+
+  .stay {
+    font-size: 2em;
+    margin-top: 15px; 
+    font-weight: 200; /* Αυξήστε αυτήν την τιμή για να αυξήσετε το μέγεθος των γραμμάτων */
+  }
+
+  .inside{
+    font-size: 2em;
+    font-weight: 200; 
+    margin-top: -10px;
   }
 }
