--- a/src/assets/MainContent.css
+++ b/src/assets/MainContent.css
@@ -1,18 +1,34 @@
 /* Καθαρισμός βασικών στυλ */
 * {
   margin: 0;
+  
   padding: 0;
   box-sizing: border-box;
 }
 
 /* Κρυφή οριζόντια κύλιση */
-body {
-  overflow-x: hidden;
+body, html {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* Για να αποτρέπεται η οριζόντια κύλιση */
 }
 
-/* Βασικό περιεχόμενο με περιθώρια */
 main {
-  padding: 5rem;
+  padding: 0; /* Αφαιρέθηκε το padding που προστέθηκε στην αρχική σας διαμόρφωση */
+}
+
+.image-container {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh; /* ή όποιο ύψος επιθυμείτε */
+  overflow: hidden;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  object-fit: cover; /* Αν θέλετε να καλύψει ολόκληρη την περιοχή, αλλά μπορεί να περικόψει την εικόνα */
 }
 
 /* Hero section */
@@ -21,13 +37,13 @@ main {
   margin-left: 20%; /* Μετατοπίζει το κείμενο προς τα δεξιά */
 }
 
+
+
 /* Τίτλος προϊόντος */
 .product-title {
   margin-bottom: 4rem;
   margin-top: 7rem;
 }
-
-
 
 
 /* Σύνοψη προϊόντος */
@@ -95,28 +111,8 @@ main {
   font-size: 2em;
   margin-top: 10px; /* Αυξήστε αυτήν την τιμή για να αυξήσετε το μέγεθος των γραμμάτων */
 }
-
-img {
-  width: 100%; /* Κάνει τις εικόνες να ταιριάζουν στο πλάτος του γονικού τους στοιχείου */
-  height: auto; /* Διατηρεί τις αναλογίες της εικόνας */
-  object-fit: cover; /* Καλύπτει το διαθέσιμο πλάτος και ύψος, διατηρώντας τις αναλογίες */
-}
-
 /* Ρυθμίσεις για τον container των εικόνων */
-.image-container img {
-  height: 300px; /* Ή οποιαδήποτε τιμή προτιμάτε */
-  width: auto;
-  object-fit: contain; /* Εξασφαλίζει ότι η εικόνα θα διατηρήσει τις αναλογίες της */
-  margin: 0 auto; /* Κεντράρει την εικόνα στον διαθέσιμο χώρο */
-}
 
-.image-container {
-  width: 100%; /* Εξασφαλίζει ότι ο container των εικόνων καλύπτει το πλάτος του παραθύρου/γονικού */
-  display: flex; /* Χρήση του flex για καλύτερη διαχείριση του layout */
-  justify-content: center; /* Κεντράρει τις εικόνες οριζόντια */
-  align-items: center; /* Κεντράρει τις εικόνες κατακόρυφα */
-  overflow: hidden; /* Κρύβει τυχόν περιεχόμενο που ξεπερνάει τα όρια του container */
-}
 
 .oils-introduction-card {
  
@@ -163,14 +159,24 @@ img {
 }
 
 @media only screen and (max-width: 600px) {
-  body {
-    font-size: 16px;
-    overflow-x: hidden;
-    width: 100%;
+  main {
+    /* padding: 1rem; */
+    width: 500px; /* Μπορεί να χρειαστεί να μειώσετε το padding αν δημιουργεί περιθώρια */
   }
 
-  main {
-    padding: 1rem;
+  .hero {
+    width: 100%; /* Αυτό θα πρέπει να είναι ήδη σωστό, αλλά ελέγξτε το */
+  }
+
+  .image-container {
+    width: 100%; /* Καμία ανάγκη για 'vw' στο responsive layout */
+    margin: 0; /* Βεβαιωθείτε ότι δεν υπάρχει margin */
+  }
+
+  img {
+    max-width: 100%;
+    height: auto; /* Αυτό εξασφαλίζει ότι η εικόνα δεν περιορίζεται στα 150px σε μικρές συσκευές */
+    object-fit: cover;
   }
 
   .hero {
@@ -219,14 +225,6 @@ img {
     display: inline-block;
  border-bottom: 0.5px solid;
     
-}
-
-.image-container img {
-  height: 150px; /* Περαιτέρω μείωση για κινητά τηλέφωνα */
-}
-
-img {
-  object-fit: contain; /* Αλλαγή του object-fit για μικρότερες συσκευές για να δείχνει ολόκληρη η εικόνα */
 }
 
 .OrderButton button { 
